--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,4 +1,5 @@
 :root{
+    --primary-color: rgb(238, 75, 43);
     --white-color:#fff;
     --black-color:#000;
     --text-color:#333;
@@ -26,4 +27,13 @@ html {
 .grid__row {
     display:flex;
     flex-wrap: wrap;
+}
+/* Animation */
+@keyframes fadeIn {
+   from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
 }
