--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,14 @@
     margin: 0 8px;
     position: relative;
 }
+.header__navbar-item--has-qr:hover .header__qr {
+    display: block;
+}
+
+.header__navbar-item--has-notify:hover .header__notify {
+    display: block;
+}
+
 .header__navbar-item,
 .header__navbar-item-link{
     
@@ -74,9 +82,21 @@
     background-color: var(--white-color);
     position: absolute;
     left: 0;
-    top: 100%;
+    top: 118%;
     padding: 8px;
     border-radius:2px;
+    display: none;
+    animation: fadeIn ease-in 0.3s;
+}
+.header__qr::before{
+    position: absolute;
+    left: 0;
+    top: -16px;
+    width: 100%;
+    height:20px;
+    content: "";
+    display: block;
+
 }
 
 .header__qr-img{
@@ -84,7 +104,118 @@
 }
 .header__qr-apps{
     display: flex;
+    justify-content: space-between;
 }
+
+.header__qr-link:nth-child(1){
+    margin-left: 11px;
+}
+
+.header__qr-link:nth-child(2) {
+    margin-right: 11px;
+}
+
 .header__qr-download-img{
+    height: 16px;
+}
+/* Header notifycation  */
+
+.header__notify {
+    position: absolute;
+    top: 118%;
+    width: 404px;
+    background-color: var(--white-color);
+    right: 0px;
+    border: 1px solid #D3D3D3;
+    cursor: default ;
+    transform-origin: calc(100% - 20px) top;
+    animation:headerNotifyGrowth ease-in 0.25s;
+    display: none;
+}
+@keyframes headerNotifyGrowth {
+        from {
+            opacity: 0;
+            transform: scale(0);
+        }
+        to{
+            opacity: 1;
+            transform: scale(1);
+        }
+}
+.header__notify-header {
+    height: 40px;
+    background-color: var(--white-color);
+}
+
+
+
+.header__notify-header-h3 {
+    color: #999;
+    margin: 0 0 0 12px;
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 40px;
+    cursor: text;
+}
+.header__notify-list {
+    padding-left: 0;
+    list-style: none;
+}
+
+.header__notify-item {
+    display: flex;
+}
+.header__notify-item:hover{
+    background-color: #f7f7f7;
+}
+.header__notify-item--views{
+    background-color: rgba(238, 75, 43, 0.09);
+}
+
+.header__notify-link {
+    display: flex;
+    width: 100%;
+    padding: 6px;
+    text-decoration: none;
+    
+}
+
+.header__notify-img {
+    width: 50px;
+    object-fit: contain;
+}
+
+.header__notify-info {
+    margin-left: 6px;
+}
+
+.header__notify-name {
+    display: block;
+    font-size: 1.5rem;
+    color: var(--text-color);
+    font-weight: 600;
+    line-height: 1.8rem;
+    
+}
+
+.header__notify-description {
+    display: block;
+    font-size: 1.2rem;
+    color: #756F6E;
+    line-height: 1.6rem;
+    margin-top: 4px;
+}
+
+.header__notify-footer{
+    display: flex;
+}
+.header__notify-footer-btn{
+    text-decoration: none;
+    color: var(--text-color);
+    padding: 8px 0;
+    width: 100%;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 600;
 
 }
