--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,8 +130,33 @@
     cursor: default ;
     transform-origin: calc(100% - 20px) top;
     animation:headerNotifyGrowth ease-in 0.25s;
+    will-change: opacity, transform ;
     display: none;
 }
+
+.header__notify::before {
+    content: "";
+    position: absolute;
+    border-style: solid;
+    border-width: 20px 27px ;
+    border-color: transparent transparent var(--white-color) transparent;
+    top: -30px;
+    right: 2px;
+
+}
+
+.header__notify::after{
+    content: "";
+    display: block;
+    position: absolute;
+    height: 20px;
+    width: 87px;
+    top: -16px;
+    right: 0px;
+   
+}
+
+
 @keyframes headerNotifyGrowth {
         from {
             opacity: 0;
@@ -218,4 +243,128 @@
     font-size: 1.4rem;
     font-weight: 600;
 
+}
+
+/* Author modal */
+.auth-form{
+    width: 500px;
+    background-color: var(--white-color);
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+.auth-form__container{
+    padding: 0 32px;
+}
+.auth-form_header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 12px;
+    margin-top:10px;
+}
+
+.auth-form__heading{
+    font-size: 2.2rem;
+    font-weight: 600;
+    color: var(--text-color);
+}
+
+.auth-form__switch-btn{
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: var(--primary-color);
+    cursor: pointer;
+
+}
+
+.auth-form__form{
+    
+}
+
+.auth-form__input{
+    width: 100%;
+    height: 40px;
+    margin-top: 16px;
+    padding: 0 12px;
+    font-size: 1.4rem;
+    border-radius: 2px;
+    border: 1px solid var(--border-color); 
+    outline: none;
+}.auth-form__input:focus{
+    border-color: #888;
+}
+
+.auth-form__aside{
+    margin-top: 18px;
+}
+
+.auth-form__policy-text{
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+    text-align: center;
+    padding:0 12px;
+    
+}
+
+.author-form__text-link{
+    text-decoration: none;
+    color: var(--primary-color);
+}
+.auth-form__controls {
+    margin-top: 80px;
+    display: flex;
+    justify-content: flex-end;
+
+}
+.auth-form__controls-back{
+    margin-right: 8px;
+}
+.auth-form__socials{
+    background-color:#F5F5F5;
+    padding: 16px 36px;
+    display: flex;
+    justify-content:space-between;
+    margin-top: 22px;
+}
+
+.auth-form__socials-icon{
+    font-size: 1.8rem;
+
+}
+.auth-form__socials--facebook{
+    background-color: #3A5A98;
+    color: var(--white-color);
+}
+
+.auth-form__socials--facebook
+.auth-form__socials-icon{
+    color: var(--white-color);
+}
+.auth-form__social-title{
+    margin: 0 36px;
+}
+
+.auth-form__socials--google {
+    color: #666;
+    background-color: var(--white-color);
+
+}
+.auth-form__help{
+    display:flex;
+    justify-content: flex-end;
+}
+.auth-from__help-link{
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: #939393;
+}
+.auth-form__help-separate{
+    display: block;
+    height: 20px;
+    margin: -2px 13px 0px;
+    border-left: 2px solid #EAEAEA;
+}
+.auth-form__help--forgot{
+    color: var(--primary-color);
 }
