--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,6 +4,10 @@
     --black-color:#000;
     --text-color:#333;
     --border-color:#dbdbdb;
+
+    --header-height: 120px;
+    --navbar-height: 34px;
+    --header-width-search-height:calc(var(--header-height) - var(--navbar-height));
 }
 *{
     box-sizing: inherit;
