--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 .header{
-    height: 120px;
+    height: var(--header-height);
     background-image: linear-gradient(0deg,#fe6433,#f53e2d);
 }
 .header__navbar{
@@ -9,7 +9,7 @@
 .header__navbar-list {
     list-style: none;
     padding-left: 0;
-    margin-top: 4px;
+    margin: 4px 0 0 0;
 }
 .header__navbar-item{
     min-height: 26px;
@@ -367,4 +367,142 @@
 }
 .auth-form__help--forgot{
     color: var(--primary-color);
+}
+
+/* Header with search */
+
+.header-with-search{
+    height: var(--header-width-search-height);
+    display: flex;
+    align-items: center;
+    margin: 0px 8px;
+}
+
+.heeader__logo{
+    width: 200px;
+    
+}
+
+.header__logo-img {
+    width: 150px;
+    color: var(--white-color);
+}
+.header__search{
+    height:40px;
+    background-color: var(--white-color);
+    flex: 1;
+    border-radius:2px ;
+    display: flex;
+    align-items: center;
+}
+
+.header__cart{
+    width: 150px;
+    text-align: center;
+}
+
+.header__cart-icon{
+    color: var(--white-color);
+    font-size:2.4rem;
+    margin-top: 6px;
+}
+
+.header__search-input{
+    flex: 1;
+    width: 100%;
+    border: none;
+    outline: none;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    padding: 0 16px;
+    border-radius: 3px;
+}
+
+.header__search-selection{
+    border-left: 1px solid #e8e8e8;
+    padding-left: 16px;
+    position: relative;
+    margin-bottom: -9px ;   
+}
+
+
+.header__search-selection-label{
+    font-size:1.4rem;
+    color: var(--text-color);
+}
+
+.header__search-selection-icon{
+    font-size: 1.4rem;
+    color: rgb(131, 131, 131);
+    margin: 0 16px 0 8px;
+    position: relative;
+    top: 1px;
+}
+.header__search-btn{
+    background-color:var(--primary-color);
+    border: none;
+    height: 34px;
+    width: 60px;
+    border-radius: 3px;
+    margin-right: 3px;
+    outline: none;
+}
+.header__search-btn:hover{
+    cursor: pointer;
+    background-color: #fb6445;
+}
+
+.header__search-btn-icon{
+    font-size: 1.4rem;
+    color: var(--white-color);
+}
+.header__search-selection:hover .header___search-option {
+    display: block;
+}
+.header___search-option::after {
+    display: block;
+    content: "";
+    width: 100%;
+    height: 10px;
+    position: absolute;
+    top: -10px;
+    left: 0;
+}
+.header___search-option{
+    position: absolute;
+    right: 0;
+    top:100%;
+    width: 130px;
+    list-style: none;
+    box-shadow: 0 1px 1px #d2c0c0;
+    padding-left: 0px;
+    border-radius: 3px ;
+    display: none;
+}
+
+.header___search-option-item{
+    background-color: var(--white-color);
+    border-radius: 3px;
+    padding: 8px 8px;   
+    
+}
+.header___search-option-item:hover{
+    cursor: pointer;
+    background-color: #ecc4c4;
+}
+
+.header___search-option-item span {
+    font-size: 1.4rem;
+    color: var(--text-color);
+    margin-left: 8px;
+}
+.header___search-option-item i{
+    font-size: 1.2rem;
+    color: var(--primary-color);
+    margin-left: 12px;
+    display: none;
+}
+
+.header___search-option-item--active i {
+    display: inline-block;
 }
