--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,17 +7,100 @@
   justify-content: space-between;
 }
 .header__navbar-list {
+  z-index: 1;
   list-style: none;
   padding-left: 0;
   margin: 4px 0 0 0;
+  display: flex;
 }
 .header__navbar-item {
   min-height: 26px;
   margin: 0 8px;
   position: relative;
 }
+
+.header__navbar-user {
+  display: flex;
+  justify-items: center;
+  position: relative;
+}
+.header__navbar-user-img {
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.header__navbar-user-name {
+  margin-left: 4px;
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
 .header__navbar-item--has-qr:hover .header__qr {
   display: block;
+}
+
+.header__navbar-user:hover .header__navbar-user-menu {
+  display: block;
+}
+.header__navbar-user-menu {
+  position: absolute;
+  z-index: 1;
+  padding: 2px 0;
+  top: calc(100% + 4px);
+  right: 0;
+  width: 160px;
+  border-radius: 2px;
+  background-color: var(--white-color);
+  list-style: none;
+  box-shadow: 0 1px 3.125rem 0 rgba(0, 0, 0, 0.2);
+  display: none;
+}
+
+.header__navbar-user-menu::before {
+  content: "";
+  position: absolute;
+  border-style: solid;
+  border-width: 20px 27px;
+  border-color: transparent transparent var(--white-color) transparent;
+  top: -29px;
+  right: 4px;
+}
+.header__navbar-user-menu::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -8px;
+  right: 0;
+  width: 69%;
+  height: 8px;
+}
+
+.header__navbar-user-item--separate {
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.header__navbar-user-item {
+}
+.header__navbar-user-item a {
+  text-decoration: none;
+  color: var(--text-color);
+  font-size: 1.4rem;
+  padding: 6px 16px;
+  display: block;
+  font-weight: 400;
+}
+.header__navbar-user-item a:first-child {
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+}
+.header__navbar-user-item a:last-child {
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+.header__navbar-user-item a:hover {
+  background-color: #fafafa;
 }
 
 .header__navbar-item--has-notify:hover .header__notify {
@@ -35,7 +118,7 @@
 
 .header__navbar-item,
 .header__navbar-item-link {
-  display: inline-flex;
+  display: flex;
   align-items: center;
 }
 .header__navbar-item--strong {
@@ -57,6 +140,9 @@
 .header__navbar-item-link:hover {
   cursor: pointer;
   color: rgba(0, 0, 0, 0.7);
+}
+.header__navbar-icon-link:nth-child(2) {
+  margin-left: 3px;
 }
 .header__navbar-icon-link {
   color: var(--white-color);
@@ -122,12 +208,14 @@
   width: 404px;
   background-color: var(--white-color);
   right: 0px;
-  border: 1px solid #d3d3d3;
+  border-radius: 2px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: default;
-  transform-origin: calc(100% - 20px) top;
+  transform-origin: calc(100% - 32px) top;
   animation: headerNotifyGrowth ease-in 0.25s;
   will-change: opacity, transform;
   display: none;
+  z-index: 1;
 }
 
 .header__notify::before {
@@ -362,6 +450,11 @@
 
 .heeader__logo {
   width: 200px;
+}
+
+.heeader__logo-link {
+  text-decoration: none;
+  color: transparent;
 }
 
 .header__logo-img {
@@ -680,3 +773,73 @@
   display: block;
 }
 /* Cart */
+
+/* App container */
+.app__container {
+  background-color: #f5f5f5;
+}
+
+.app__content {
+  padding-top: 24px;
+}
+.category {
+  background-color: var(--white-color);
+  border-radius: 2px;
+}
+
+.category__heading {
+  font-size: 1.7rem;
+  color: var(--text-color);
+  padding: 12px 16px;
+  margin-top: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.category__heading-icon {
+  font-size: 1.4rem;
+  margin-right: 4px;
+  position: relative;
+  top: -1px;
+}
+.category-list {
+  padding: 0 0 8px 0;
+  list-style: none;
+  margin-left: 9px;
+}
+
+.category-item {
+}
+.category-item--active .category-item__link {
+  color: var(--primary-color);
+}
+.category-item--active .category-item__link::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 7px;
+  border: 4px solid;
+  transform: translateY(-50%);
+  border-color: transparent transparent transparent var(--primary-color);
+}
+.category-item__link {
+  position: relative;
+  font-size: 1.5rem;
+  color: var(--text-color);
+  text-decoration: none;
+  padding: 4px 16px;
+  display: block;
+  transition: right linear 0.1s;
+  right: 0;
+  font-weight: 600;
+}
+.category-item__link:hover {
+  right: -4px;
+  color: var(--primary-color);
+}
+
+/* Home sort + filter */
+
+.home-filter {
+  display: inline-flex;
+  
+}
