--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,6 +4,7 @@
   --black-color: #000;
   --text-color: #333;
   --border-color: #dbdbdb;
+  --star-gold-color: #ffce3e;
 
   --header-height: 120px;
   --navbar-height: 34px;
@@ -34,18 +35,23 @@ html {
 .grid__row {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -12px;
-  margin-right: -12px;
+  margin-left: -5px;
+  margin-right: -5px;
 }
 /* Test */
-.gird__column-2 {
-  padding-left: 12px;
-  padding-right: 12px;
+.grid__column-2 {
+  padding-left: 5px;
+  padding-right: 5px;
   width: 16.6667%;
 }
-.gird__column-10 {
-  padding-left: 12px;
-  padding-right: 12px;
+.grid__column-2-4 {
+  padding-left: 5px;
+  padding-right: 5px;
+  width: 20%;
+}
+.grid__column-10 {
+  padding-left: 5px;
+  padding-right: 5px;
   width: 83.3334%;
 }
 
@@ -108,7 +114,7 @@ html {
   justify-content: center;
   align-items: center;
   line-height: 1.6rem;
-  background-color: #e8dddd;
+  background-color: #f6f3f3;
 }
 .btn.btn--normal:hover {
   background-color: rgba(0, 0, 0, 0.09);
@@ -128,4 +134,53 @@ html {
   cursor: default;
   color: #949494;
   background-color: #c3c3c3;
+}
+
+/* Selection */
+.select-input {
+  position: relative;
+  min-width: 200px;
+  height: 34px;
+  padding: 0 12px;
+  border-radius: 2px;
+  background-color: var(--white-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.select-input__label {
+  font-size: 1.4rem;
+}
+.select-input__icon {
+  font-size: 1.4rem;
+  color: rgb(131, 131, 131);
+  position: relative;
+  top: 1px;
+}
+.select-input:hover .select-input__list {
+  display: block;
+}
+.select-input__list {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 25px;
+  border-radius: 2px;
+  background-color: var(--white-color);
+  padding: 8px 16px;
+  list-style: none;
+  display: none;
+}
+
+.select-input__link {
+  font-size: 1.4rem;
+  color: var(--text-color);
+  text-decoration: none;
+  display: block;
+  padding: 4px 0px;
+}
+
+.select-input__link:hover {
+  color: var(--primary-color);
 }
