--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -171,6 +171,7 @@ html {
   padding: 8px 16px;
   list-style: none;
   display: none;
+  z-index: 1;
 }
 
 .select-input__link {
@@ -183,4 +184,36 @@ html {
 
 .select-input__link:hover {
   color: var(--primary-color);
+}
+/* pagination */
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+}
+.pagination-item {
+  margin: 0 12px;
+}
+.pagination-item--active .pagination-item__link {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+}
+.pagination-item--active .pagination-item__link:hover {
+  background-color: #ed5c3f;
+}
+.pagination-item__link {
+  --height: 30px;
+  display: block;
+  line-height: var(--height);
+  text-align: center;
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 1.7rem;
+  color: #939393;
+  min-width: 40px;
+  height: var(--height);
+  border-radius: 2px;
+}
+.pagination-item__icon {
 }
