--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,7 +48,7 @@
   position: absolute;
   z-index: 1;
   padding: 2px 0;
-  top: calc(100% + 4px);
+  top: calc(100% + 6px);
   right: 0;
   width: 160px;
   border-radius: 2px;
@@ -170,6 +170,8 @@
   border-radius: 2px;
   display: none;
   animation: fadeIn ease-in 0.3s;
+  z-index: 1;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 .header__qr::before {
   position: absolute;
@@ -499,6 +501,7 @@
   box-shadow: 0 1px 3.125rem 0 rgba(0, 0, 0, 0.2);
   display: none;
   cursor: default;
+  z-index: 1;
 }
 
 .header__cart-heading {
@@ -512,6 +515,8 @@
 .header__cart-list-item {
   padding-left: 0;
   list-style: none;
+  height: 56vh;
+  overflow-y: auto;
 }
 
 .header__cart-item {
@@ -538,9 +543,18 @@
 }
 .header__cart-item-name {
   font-size: 1.4rem;
+  line-height: 2rem;
+  max-height: 4rem;
+  overflow: hidden;
   font-weight: 700;
   color: var(--text-color);
   margin: 0;
+  flex: 1;
+  padding-right: 16px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  text-align: left;
 }
 .header__cart-item-price {
   font-size: 1.4rem;
@@ -702,6 +716,7 @@
   padding-left: 0px;
   border-radius: 3px;
   display: none;
+  z-index: 1;
 }
 
 .header___search-option-item {
@@ -743,6 +758,7 @@
   box-shadow: 0 1px 5px rgb(172, 172, 172);
   display: none;
   overflow: hidden;
+  z-index: 1;
 }
 
 .header__search-history-heading {
@@ -788,31 +804,38 @@
 }
 
 .category__heading {
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   color: var(--text-color);
-  padding: 12px 16px;
+  padding: 16px 16px 0;
   margin-top: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  text-transform: uppercase;
+  font-weight: 800;
+  /* border-bottom: 1px solid rgba(0, 0, 0, 0.05); */
 }
 
-.category__heading-icon {
-  font-size: 1.4rem;
-  margin-right: 4px;
-  position: relative;
-  top: -1px;
-}
 .category-list {
   padding: 0 0 8px 0;
   list-style: none;
-  margin-left: 9px;
 }
 
 .category-item {
+  position: relative;
+}
+.category-item:first-child::before {
+  display: none;
+}
+.category-item::before {
+  content: "";
+  border-top: 1px solid #e1e1e1;
+  position: absolute;
+  top: 0;
+  left: 20px;
+  right: 20px;
 }
 .category-item--active .category-item__link {
   color: var(--primary-color);
 }
-.category-item--active .category-item__link::before {
+/* .category-item--active .category-item__link::before {
   content: "";
   position: absolute;
   top: 50%;
@@ -820,20 +843,17 @@
   border: 4px solid;
   transform: translateY(-50%);
   border-color: transparent transparent transparent var(--primary-color);
-}
+} */
 .category-item__link {
   position: relative;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   color: var(--text-color);
   text-decoration: none;
-  padding: 4px 16px;
+  padding: 6px 20px;
   display: block;
-  transition: right linear 0.1s;
-  right: 0;
   font-weight: 600;
 }
 .category-item__link:hover {
-  right: -4px;
   color: var(--primary-color);
 }
 
@@ -909,15 +929,27 @@
 
 /* Product Item */
 .home-product-item {
+  display: block;
   position: relative;
   margin-top: 10px;
+  text-decoration: none;
   background-color: var(--white-color);
+  border-radius: 2px;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+  transition: transform ease-in 0.1s;
+  will-change: transform;
+}
+.home-product-item:hover {
+  box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.05);
+  transform: translateY(-1px);
 }
 .home-product-item__img {
   padding-top: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
 }
 .home-product-item__name {
   font-size: 1.4rem;
@@ -942,12 +974,20 @@
 .home-product-item__price-old {
   font-size: 1.4rem;
   color: #666;
+  margin-left: 10px;
   text-decoration: line-through;
+}
+.home-product-item__price-percent {
+  width: 22px;
+  margin-left: 20px;
+  font-size: 1.2rem;
+  background-color: #feeeea;
+  font-weight: 700;
+  color: #ee4d2d;
 }
 .home-product-item__price-new {
   font-size: 1.6rem;
   color: var(--primary-color);
-  margin-left: 10px;
   font-weight: 600;
 }
 .home-product-item__action {
@@ -1015,7 +1055,7 @@ i.home-product-item__like-icon-fill {
 .home-product-item__favourite::after {
   content: "";
   position: absolute;
-  left: -0.2px;
+  left: 0px;
   bottom: -3px;
   border-top: 3.5px solid currentColor;
   border-left: 3.5px solid transparent;
@@ -1034,15 +1074,113 @@ i.home-product-item__like-icon-fill {
   height: 36px;
   text-align: center;
   background-color: rgba(255, 216, 64, 0.94);
+  border-top-right-radius: 1.9px;
+}
+.home-product-item__sale-off::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  border-width: 0 20px 4px;
+  border-style: solid;
+  color: rgba(255, 216, 64, 0.94);
+  border-color: transparent currentColor transparent currentColor;
 }
 .home-product-item__sale-off-percent {
   color: #ee4d2d;
   font-weight: 700;
-  font-size: 1.3rem;
-  line-height: 1.3rem;
+  font-size: 1.2rem;
+  line-height: 1.2rem;
 }
 .home-product-item__sale-off-label {
   color: var(--white-color);
+  font-size: 1.3rem;
+  line-height: 1.3rem;
+  font-weight: 700;
+}
+/* tự bổ sung làm thêm về tỉnh thành nek */
+.home-product-item__area {
+  display: flex;
+  justify-content: end;
+  margin-right: 10px;
+  margin-top: 4px;
+}
+.home-product-item__provarea {
+  font-size: 9px;
+  color: var(--text-color);
+  font-weight: 200;
+}
+
+.home-product__pagination {
+  margin-top: 48px;
+  margin-bottom: 32px;
+}
+
+/* Footer */
+
+.footer {
+  padding-top: 16px;
+  border-top: 4px solid var(--primary-color);
+  background-color: var(--white-color);
+}
+.footer__heading {
   font-size: 1.4rem;
-  line-height: 1.4rem;
+  text-transform: uppercase;
+  color: var(--text-color);
+  font-weight: 900;
+}
+.footer-list {
+  padding-left: 0;
+  list-style: none;
+}
+.footer-item__link {
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: #737373;
+  padding: 2px 0;
+  display: flex;
+  align-items: center;
+}
+.footer-item__link:hover {
+  color: var(--primary-color);
+}
+
+.footer-item__icon {
+  margin: 1px 8px 0 0;
+  font-size: 1.6rem;
+}
+.footer__download {
+  display: flex;
+}
+.footer__download-qr {
+  width: 80px;
+  height: 80px;
+  border: 1px solid var(--border-color);
+}
+
+.footer__download-apps {
+  flex: 1;
+  margin-left: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer__download-apps-img {
+  height: 20px;
+}
+.footer__download-app-link {
+  text-decoration: none;
+  color: transparent;
+}
+.footer__bottom {
+  padding: 8px 0;
+  background-color: #f5f5f5;
+  margin-top: 24px;
+}
+.footer__text {
+  margin: 0;
+  font-size: 1.4rem;
+  text-align: center;
+  color: #737373;
 }
